@@ -111,6 +111,10 @@ define genext2fs
 	genext2fs -d $(TREE) -b `expr $$(du -s $(TREE) | cut -f 1) + $$(expr $$(find $(TREE) | wc -l) \* 2)` -r 0
 endef
 
+define genromfs
+	genromfs -d $(TREE) -f
+endef
+
 #
 # Globally useful variables.
 #
@@ -566,7 +570,7 @@ $(TEMP_INITRD): $(STAMPS)tree-$(targetstring)-stamp
 	if [ $(INITRD_FS) = ext2 ]; then \
 		$(genext2fs) $(TEMP)/initrd; \
 	elif [ $(INITRD_FS) = romfs ]; then \
-		genromfs -d $(TREE) $(TEMP)/initrd; \
+		$(genromfs) $(TEMP)/initrd; \
 	else \
 		echo "Unsupported filesystem type"; \
 		exit 1; \
@@ -613,7 +617,7 @@ $(TEMP_EXTRA): $(STAMPS)extra-$(targetstring)-stamp
 	set -e; if [ $(INITRD_FS) = ext2 ]; then \
 		$(genext2fs) $@; \
 	elif [ $(INITRD_FS) = romfs ]; then \
-		genromfs -d $(TREE) $@; \
+		$(genromfs) $@; \
 	else \
 		echo "Unsupported filesystem type"; \
                 exit 1; \
